--- a/.github/workflows/pcu.yml
+++ b/.github/workflows/pcu.yml
@@ -8,4 +8,4 @@ jobs:
   refreshDeps:
     runs-on: ubuntu-latest
     steps:
-      - uses: zehengl/refresh-python-dependency@latest
+      - uses: zehengl/refresh-python-dependency@v0.1.0
